welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {


def faireV(c:Color) {
	avance()
	setCouleurBrosse(Color.YELLOW)
	baisseBrosse()
	leveBrosse()
	avance()
	gauche()
	avance()
	baisseBrosse()
	leveBrosse()
	recule()
	droite()
	avance()
	baisseBrosse()
	leveBrosse()
	avance()
	gauche()
		
}
for (compteur <- 1 to 4 ) {
	faireV()
}


faireV()



}


